changing to american spelling, fixing minor spelling/grammar errors, changing out.width in plots to percent instead of pt, chaning underscores to dashes in code blocks

--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -43,9 +43,9 @@ These tasks are all examples of \index{classification} **classification**, i.e.,
 categorical class (sometimes called a *label*) \index{class}\index{categorical variable} for an observation given its
 other variables (sometimes called *features*). \index{feature|see{predictor}}
 
-Generally, a classifier assigns an observation without a known class (e.g. a new patient) 
-to a class (e.g. diseased or healthy) on the basis of how similar it is to other observations
-for which we do know the class (e.g. previous patients with known diseases and
+Generally, a classifier assigns an observation without a known class (e.g., a new patient) 
+to a class (e.g., diseased or healthy) on the basis of how similar it is to other observations
+for which we do know the class (e.g., previous patients with known diseases and
 symptoms). These observations with known classes that we use as a basis for
 prediction are called a **training set**; \index{training set} this name comes from the fact that
 we use these data to train, or teach, our classifier. Once taught, we can use
@@ -176,7 +176,7 @@ cancer |>
 
 ### Exploring the cancer data
 
-Before we start doing any modelling, let's explore our data set. Below we use
+Before we start doing any modeling, let's explore our data set. Below we use
 the `group_by`, `summarize` and `n` \index{group\_by}\index{summarize} functions to find the number and percentage 
 of benign and malignant tumor observations in our data set. The `n` function within
 `summarize` when paired with `group_by` counts the number of observations in each `Class` group. 
@@ -846,7 +846,7 @@ on the right in Figure \@ref(fig:05-scaling-plt) shows a much more intuitively r
 selection of nearest neighbors. Thus, standardizing the data can change things
 in an important way when we are using predictive algorithms. 
 Standardizing your data should be a part of the preprocessing you do
-before predictive modelling and you should always think carefully about your problem domain and
+before predictive modeling and you should always think carefully about your problem domain and
 whether you need to standardize your data. 
 
 ```{r 05-scaling-plt, echo = FALSE, fig.height = 4, fig.width = 10, fig.cap = "Comparison of K = 3 nearest neighbors with standardized and unstandardized data"}
@@ -1071,7 +1071,7 @@ each area of the plot to the predictions the $K$-nearest neighbor
 classifier would make. We can see that the decision is 
 always "benign," corresponding to the blue color.
 
-```{r 05-upsample-2, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Imbalanced data with background color indicating the decision of the classifier and the points represent the labelled data"}
+```{r 05-upsample-2, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Imbalanced data with background color indicating the decision of the classifier and the points represent the labeled data"}
 
 knn_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = 7) |>
   set_engine("kknn") |>
@@ -1126,7 +1126,7 @@ Now suppose we train our $K$-nearest neighbor classifier with $K=7$ on this *bal
 Figure \@ref(fig:05-upsample-plot) shows what happens now when we set the background color 
 of each area of our scatter plot to the decision the $K$-nearest neighbor 
 classifier would make. We can see that the decision is more reasonable; when the points are close
-to those labelled malignant, the classifier predicts a malignant tumor, and vice versa when they are 
+to those labeled malignant, the classifier predicts a malignant tumor, and vice versa when they are 
 closer to the benign tumor observations.
 
 ```{r 05-upsample-plot, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Upsampled data with background color indicating the decision of the classifier"}
@@ -1180,7 +1180,7 @@ Note that each of these steps is exactly the same as earlier, except for one maj
 we did not use the `select` function to extract the relevant variables from the data frame,
 and instead simply specified the relevant variables to use via the 
 formula `Class ~ Area + Smoothness` (instead of `Class ~ .`) in the recipe.
-You will also notice that we did not call `prep()` on the recipe; this is unnecssary when it is
+You will also notice that we did not call `prep()` on the recipe; this is unnecessary when it is
 placed in a workflow.
 
 We will now place these steps in a `workflow` using the `add_recipe` and `add_model` functions, \index{tidymodels!add\_recipe}\index{tidymodels!add\_model}
@@ -1201,7 +1201,7 @@ for the number of neighbors and weight function (for now, these are just the val
 the overall workflow, including the centering and scaling preprocessing steps.
 In other words, when we use the `predict` function with the `knn_fit` object to make a prediction for a new
 observation, it will first apply the same recipe steps to the new observation. 
-As an example, we will predict the class label of a two new observations:
+As an example, we will predict the class label of two new observations:
 one with `Area = 500` and `Smoothness = 0.075`, and one with `Area = 1500` and `Smoothness = 0.1`.
 ```{r 05-workflow-predict}
 new_observation <- tibble(Area = c(500, 1500), Smoothness = c(0.075, 0.1))
