--- a/jupyter.Rmd
+++ b/jupyter.Rmd
@@ -33,7 +33,7 @@ By the end of the chapter, readers will be able to:
 
 ## Jupyter
 
-Jupyter is a web-based interactive development environment for creating, editing 
+Jupyter is a web-based interactive development environment for creating, editing, 
 and executing documents called Jupyter notebooks. Jupyter notebooks \index{Jupyter notebook} are 
 documents that contain a mix of computer code (and its output) and formattable 
 text. Given that they combine these two analysis artifacts in a single 
@@ -104,7 +104,7 @@ has been activated (Figure \@ref(fig:activate-and-run-button)), the cell can be 
 button in the toolbar, or by using a keyboard shortcut of 
 `Shift + Enter`.
 
-```{r activate-and-run-button, echo = FALSE, fig.cap = "An activated cell that is ready to be be run. The red arrow points to blue rectangle to the cell's left. The blue rectangle indicates that it is ready to be run. This can be done by clicking the run button (circled in red).", fig.retina = 2, out.width="100%"}
+```{r activate-and-run-button, echo = FALSE, fig.cap = "An activated cell that is ready to be run. The red arrow points to the blue rectangle to the cell's left. The blue rectangle indicates that it is ready to be run. This can be done by clicking the run button (circled in red).", fig.retina = 2, out.width="100%"}
 image_read("img/activate-and-run-button-annotated.png") |> 
   image_crop("3632x900")
 ```
@@ -400,7 +400,7 @@ Once you have created a new Jupyter notebook, be sure to give it a descriptive
 name, as the default file name is `Untitled.ipynb`. You can rename files by 
 right-clicking on the file name of the Jupyter notebook you just created and 
 click **Rename**. This will make the file name editable. Use your keyboard to 
-change the name. Pressing `Enter` or clicking anywhere else in the Jupyter the 
+change the name. Pressing `Enter` or clicking anywhere else in the Jupyter 
 interface will save the changed file name.
 
 We recommend not using white space or non-standard characters in file names. 
