--- a/reading.Rmd
+++ b/reading.Rmd
@@ -77,7 +77,7 @@ read in the `.csv` file named `happiness_report.csv` into R, we could do this
 using either a relative or an absolute path.  We show both choices
 below.\index{Happiness Report}
 
-```{r file-system-for-export-to-intro-datascience, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Example file system", fig.retina = 2, out.width="840pt"}
+```{r file-system-for-export-to-intro-datascience, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Example file system", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/filesystem.jpeg")
 ```
 
@@ -520,7 +520,7 @@ on the right, the first two lines of the output indicate the source is SQL. The
 last line doesn't show how many rows there are (R is trying to avoid performing
 expensive query operations), whereas the output for the `tibble` object does. 
 
-```{r 01-ref-vs-tibble, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Comparison of a reference to data in a database and a tibble in R", fig.retina = 2, out.width="800pt"}
+```{r 01-ref-vs-tibble, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Comparison of a reference to data in a database and a tibble in R", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/ref_vs_tibble.jpeg")
 ```
 
@@ -1082,7 +1082,7 @@ Let's construct a small data set of the last 400 tweets and retweets from the Ti
 are shown below.
 
 
-```{r 01-tidyverse-twitter, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "The Tidyverse Twitter feed. [Source](https://twitter.com/tidyverse?lang=en)", fig.retina = 2, out.width="800pt"}
+```{r 01-tidyverse-twitter, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "The Tidyverse Twitter feed. [Source](https://twitter.com/tidyverse?lang=en)", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/tidyverse_twitter.png")
 ```
 
@@ -1112,7 +1112,7 @@ tidyverse_tweets <- get_timelines('tidyverse', n=400)
 When you call the `get_timelines` for the first time (or any other `rtweet` function that accesses the API), 
 you will see a browser pop-up that looks something like this:
 
-```{r 01-tidyverse-authorize, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "The rtweet authorization prompt.", fig.retina = 2, out.width="800pt"}
+```{r 01-tidyverse-authorize, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "The rtweet authorization prompt.", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/authorize_question.png")
 ```
 
