--- a/regression2.Rmd
+++ b/regression2.Rmd
@@ -2,7 +2,7 @@
 
 ## Overview 
 Up to this point, we have solved all of our predictive problems---both classification
-and regression---using K-nearest neighbours (KNN)-based approaches. In the context of regression, 
+and regression---using K-nearest neighbors (KNN)-based approaches. In the context of regression, 
 there is another method commonly used 
 in scientific disciplines known as *linear regression*. This chapter provides an introduction
 to the basic concept of linear regression, shows how to use `tidymodels` to perform linear regression in R,
@@ -16,7 +16,7 @@ By the end of the chapter, readers will be able to:
 
 * Use R and `tidymodels` to fit a linear regression model on training data.
 * Evaluate the linear regression model on test data.
-* Compare and contrast predictions obtained from K-nearest neighbour regression to those obtained using linear regression from the same dataset.
+* Compare and contrast predictions obtained from K-nearest neighbor regression to those obtained using linear regression from the same data set.
 * In R, overlay predictions from linear regression on a scatter plot of data using `geom_smooth`.
 
 ## Simple linear regression
@@ -24,7 +24,7 @@ By the end of the chapter, readers will be able to:
 At the end of the previous chapter, we noted some limitations of KNN regression.
 While the method is simple and easy to understand, KNN regression does not
 predict well beyond the range of the predictors in the training data, and
-the method gets significantly slower as the training dataset grows.
+the method gets significantly slower as the training data set grows.
 \index{regression!linear}
 Fortunately, there is an alternative to KNN regression---*linear regression*---that addresses
 both of these limitations. Linear regression is also much more commonly used in practice, especially
@@ -35,7 +35,7 @@ which involves only one predictor variable and one response variable; later on, 
  Like KNN regression, simple linear regression involves
 predicting a numerical response variable (like race time, house price, or height);
 but *how* it makes those predictions for a new observation is quite different from KNN regression.
- Instead of looking at the K nearest neighbours and averaging
+ Instead of looking at the K nearest neighbors and averaging
 over their values for a prediction, in simple linear regression, we create a 
 straight line of best fit through the training data and then
 "look up" the prediction using the line.
@@ -51,7 +51,7 @@ straight line of best fit through the training data and then
 > logistic regression. After reading this chapter, see the "Additional Resources" section at the end of the
 > classification chapters to learn more about logistic regression. \index{regression!logistic}
 
-Let's return to the Sacramento housing data \index{Sacramento real estate} from the Chapter \@ref(regression1) to learn
+Let's return to the Sacramento housing data \index{Sacramento real estate} from Chapter \@ref(regression1) to learn
 how to apply linear regression and compare it to KNN regression. For now, we
 will consider 
 a smaller version of the housing data to help make our visualizations clear.
@@ -215,7 +215,7 @@ lm_fit
 
 > **Note:** An additional difference that you will notice here is that we do
 > not standardize \index{standardization} (i.e., scale and center) our
-> predictors. In K-nearest neighbours models, recall that the model fit changes
+> predictors. In K-nearest neighbors models, recall that the model fit changes
 > depending on whether we standardize first or not. In linear regression,
 > standardization does not affect the fit (it *does* affect the coefficients in
 > the equation, though!).  So you can standardize if you want&mdash;it won't
@@ -362,9 +362,9 @@ interpretability from its wiggly line.
 
 There can however also be a disadvantage to using a simple linear regression
 model in some cases, particularly when the relationship between the target and
-the predictor is not linear, but instead some other shape (e.g. curved or oscillating). In 
+the predictor is not linear, but instead some other shape (e.g., curved or oscillating). In 
 these cases the prediction model from a simple linear regression
-will underfit \index{underfitting!regression} (have high bias), meaning that model/predicted values does not
+will underfit \index{underfitting!regression} (have high bias), meaning that model/predicted values do not
 match the actual observed values very well. Such a model would probably have a
 quite high RMSE when assessing model goodness of fit on the training data and
 a quite high RMPSE when assessing model prediction quality on a test data
@@ -387,7 +387,7 @@ data is known as *extrapolation*; \index{extrapolation} KNN and linear models be
 when extrapolating. Depending on the application, the flat
 or constant slope trend may make more sense. For example, if our housing
 data were slightly different, the linear model may have actually predicted 
-a *negative* price for a small houses (if the intercept $\beta_0$ was negative),
+a *negative* price for a small house (if the intercept $\beta_0$ was negative),
 which obviously does not match reality. On the other hand, the trend of increasing
 house size corresponding to increasing house price probably continues for large houses, 
 so the "flat" extrapolation of KNN likely does not match reality. 
@@ -402,7 +402,7 @@ KNN regression: we just add more predictors to the model formula in the
 recipe. But recall that we do not need to use cross-validation to choose any parameters,
 nor do we need to standardize (i.e., center and scale) the data for linear regression. 
 Note once again that we have the same concerns regarding multiple predictors
- as in the settings of multivariable KNN regression and classification: more predictors is **not** always
+ as in the settings of multivariable KNN regression and classification: more predictors are **not** always
 better. But because the same predictor selection 
 algorithm from the classification chapter extends to the setting of linear regression,
 it will not be covered again in this chapter.
@@ -595,7 +595,7 @@ lm_plot_outlier
 
 Fortunately, if you have enough data, the inclusion of one or two
 outliers&mdash;as long as their values are not *too* wild&mdash;will
-typically not have a large an effect on the line of best fit. Figure
+typically not have a large effect on the line of best fit. Figure
 \@ref(fig:08-lm-outlier-2) shows how that same outlier data point from earlier
 influences the line of best fit when we are working with the entire original
 Sacramento training data. You can see that with this larger data set, the line
@@ -745,7 +745,7 @@ that seems to have a meaningful and nearly linear relationship with our response
 But what should we do if we cannot immediately find such a nice variable?
 Well, sometimes it is just a fact that the variables in the data do not have enough of 
 a relationship with the response variable to provide useful predictions. For example,
-if the only available predictor was "the current house owner's favourite ice cream flavour",
+if the only available predictor was "the current house owner's favorite ice cream flavor",
 we likely would have little hope of using that variable to predict the house's sale price
 (barring any future remarkable scientific discoveries about the relationship between 
 the housing market and homeowner ice cream preferences). In cases like these, 
@@ -753,7 +753,7 @@ the only option is to obtain measurements of more useful variables.
 
 There are, however, a wide variety of cases where the predictor variables do have a 
 meaningful relationship with the response variable, but that relationship does not fit
-the assumptions of the regression method you have chosen. For example, a dataframe `df`
+the assumptions of the regression method you have chosen. For example, a data frame `df`
 with two variables---`x` and `y`---with a nonlinear relationship between the two variables
 will not be fully captured by simple linear regression, as shown in Figure \@ref(fig:08-predictor-design).
 ```{r 08-predictor-design-df, echo = FALSE, message = FALSE, warning = FALSE}
@@ -770,7 +770,7 @@ df
 ```
 
 <center>
-```{r 08-predictor-design, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Example of a dataset with a nonlinear relationship between the predictor and the response"}
+```{r 08-predictor-design, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Example of a data set with a nonlinear relationship between the predictor and the response"}
 curve_plt <- ggplot(df, aes(x = x, y = y)) +
   geom_point() +
   xlab("x") +
