--- a/setup.Rmd
+++ b/setup.Rmd
@@ -96,8 +96,8 @@ and thus the command will look like this:
 The instructions for the installation will then appear:
 
 (1) Press Enter.
-(2) Once the licence agreement shows, you can press space scroll down or press `q` to skip reading it.
-(3) Type `yes` and press enter to accept the licence agreement.
+(2) Once the license agreement shows, you can press space scroll down or press `q` to skip reading it.
+(3) Type `yes` and press enter to accept the license agreement.
 (4) Press enter to accept the default installation location.
 (5) Type `yes` and press enter to instruct the installer to run `conda init`, which makes `conda` available from the terminal/shell.
 
