--- a/viz.Rmd
+++ b/viz.Rmd
@@ -80,7 +80,7 @@ are as follows:
 \index{visualization!bar}
 
 - **scatter plots** visualize the relationship between two quantitative variables
-- **line plots** visualize trends with respect to an independent, ordered quantity (e.g. time)
+- **line plots** visualize trends with respect to an independent, ordered quantity (e.g., time)
 - **bar plots** visualize comparisons of amounts
 - **histograms** visualize the distribution of one quantitative variable (i.e., all its possible values and how often they occur) \index{distribution}
 
@@ -156,7 +156,7 @@ understand and remember your message quickly.
 - Make sure the visualization answers the question you have asked most simply and plainly as possible.
 - Use legends and labels so that your visualization is understandable without reading the surrounding text.
 - Ensure the text, symbols, lines, etc., on your visualization are big enough to be easily read.
-- Ensure the data are clearly visible; don't hide the shape/distribution of the data behind other objects (e.g. a bar).
+- Ensure the data are clearly visible; don't hide the shape/distribution of the data behind other objects (e.g.,  a bar).
 - Make sure to use color schemes that are understandable by those with
   colorblindness (a surprisingly large fraction of the overall population).
   For example, [colorbrewer.org](https://colorbrewer2.org) and the `RColorBrewer`
@@ -283,7 +283,7 @@ default settings.
 \index{ggplot!aes}
 \index{ggplot!geom\_point}
  
-```{r 03-ggplot-function-scatter, echo=FALSE, fig.cap = "Creating a scatter plot with the ggplot function", message =F}
+```{r 03-ggplot-function-scatter, echo=FALSE, fig.cap = "Creating a scatter plot with the ggplot function", message =F, out.width="100%"}
 knitr::include_graphics("img/ggplot_function_scatter.jpeg")
 ```
 
@@ -375,7 +375,7 @@ to specify the upper and lower bounds to limit the axis.
 We can create that using the `c` function.
 Note that it is important that the vector given to `xlim` must be of the same
 type as the data that is mapped to that axis. 
-Here, we have a mapped a date to the x-axis, 
+Here, we have mapped a date to the x-axis, 
 and so we need to use the `date` function 
 (from the `tidyverse` `lubridate` R package) 
 to convert the character strings we provide to `c` to `date` vectors.
@@ -418,7 +418,7 @@ In our data visualization,
 this would be when we map data to the axes in the `aes` function.
 Then we add our key visual subjects to the painting.
 In our data visualization, 
-this would be the geometric objects (e.g., `geom_point`, `geom_line`, etc).
+this would be the geometric objects (e.g., `geom_point`, `geom_line`, etc.).
 And finally, we work on adding details and refinements to the painting.
 In our data visualization this would be when we fine tune axis labels,
 change the font, adjust the point size, and do other related things.
@@ -563,7 +563,7 @@ see all of the scatter points.
 In particular, we will improve the plot by adjusting the horizontal
 and vertical axes so that they are on a **logarithmic** (or **log**) scale. \index{logarithmic scale}
 Log scaling is useful when your data take both *very large* and *very small* values,
-because it helps space out small values and squish larger values together.
+because it helps space out small values and squishes larger values together.
 For example, $\log_{10}(1) = 0$, $\log_{10}(10) = 1$, $\log_{10}(100) = 2$, and $\log_{10}(1000) = 3$;
 on the logarithmic scale, \index{ggplot!logarithmic scaling} 
 the values 1, 10, 100, and 1000 are all the same distance apart!
@@ -592,7 +592,7 @@ ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   scale_y_log10(labels = label_comma())
 ```
 
-```{r 03-changing_the_units, include = FALSE}
+```{r 03-changing-the-units, include = FALSE}
 english_mother_tongue <- can_lang |>
   filter(language == "English") |>
   pull(mother_tongue)
@@ -772,7 +772,7 @@ it as their primary language at home? The answer to both these questions is
 "no!" However, with exploratory data analysis, we can create new hypotheses,
 ideas, and questions (like the ones at the beginning of this paragraph).
 Answering those questions often involves doing more complex analyses, and sometimes
-even gathering additional data. We will see more of such complex analyses in later on in 
+even gathering additional data. We will see more of such complex analyses later on in 
 this book.  
 
 <!--
@@ -907,7 +907,7 @@ that holds the values we would like to use to do the ordering (here, `size`).
 The `fct_reorder` function uses ascending order by default, 
 but this can be changed to descending order 
 by setting  `.desc = TRUE`.
-We do this here so that the largest bar will closest to the axis line,
+We do this here so that the largest bar will be closest to the axis line,
 which is more visually appealing.
 
 To label the x and y axes, we will use the `labs` function
@@ -1337,7 +1337,7 @@ visualizations and images.  Which one you choose can depend on several factors,
 such as file size/type limitations (e.g., if you are submitting your
 visualization as part of a conference paper or to a poster printing shop) and
 where it will be displayed (e.g., online, in a paper, on a poster, on a
-billboard, in talk slides).  Generally speaking, images come in two flavours:
+billboard, in talk slides).  Generally speaking, images come in two flavors:
 *raster* \index{bitmap|see{raster graphics}}\index{raster graphics} formats 
 and *vector* \index{vector graphics} formats.
 
@@ -1456,7 +1456,7 @@ sizes.  This makes them great for presentation media of all sizes, from papers
 to posters to billboards.
 
 
-```{r 03-raster-image, echo=FALSE, fig.cap = "Zoomed in `faithful`, raster (PNG, left) and vector (SVG, right) formats", fig.show="hold", out.width="230pt", out.height="200pt", fig.align= "center", message =F}
+```{r 03-raster-image, echo=FALSE, fig.cap = "Zoomed in `faithful`, raster (PNG, left) and vector (SVG, right) formats", fig.show="hold", out.width="100%", out.height="200pt", fig.align= "center", message =F}
 knitr::include_graphics("img/faithful_zoom.png")
 knitr::include_graphics("img/faithful_zoom.svg")
 ```
