--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -78,7 +78,7 @@ library(canlang)
 library(cowplot)
 ```
 
-``` {r 02-obs, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A data frame storing data regarding the population of various regions in Canada. In this example data frame, the row that corresponds to the observation for the city of Vancouver is colored yellow, and the column that corresponds to the population variable is colored blue.", fig.retina = 2, out.width = "650pt"}
+``` {r 02-obs, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A data frame storing data regarding the population of various regions in Canada. In this example data frame, the row that corresponds to the observation for the city of Vancouver is colored yellow, and the column that corresponds to the population variable is colored blue.", fig.retina = 2, out.width = "100%"}
 knitr::include_graphics("img/obs_and_var/obs_and_var.001.jpeg")
 ```
 
@@ -88,7 +88,7 @@ Internally, R stores the columns of a data frame as either
 `population`.  We will explain what lists and vectors are in the next two
 sections.
 
-``` {r 02-vectors, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Data frame with three vectors", fig.retina = 2, out.width = "700pt"}
+``` {r 02-vectors, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Data frame with three vectors", fig.retina = 2, out.width = "100%"}
 knitr::include_graphics("img/vectors.jpeg")
 ```
 
@@ -119,7 +119,7 @@ year
 > We encourage readers who are enthusiastic to learn more to read the
 > Vectors chapter of Advanced R [@wickham2019advanced].
 
-``` {r 02-vector, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Example of a vector whose type is character.", fig.retina = 2, out.width = "700pt"}
+``` {r 02-vector, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Example of a vector whose type is character.", fig.retina = 2, out.width = "100%"}
 knitr::include_graphics("img/vector/vector.001.jpeg")
 ```
 
@@ -162,7 +162,7 @@ consistency. All elements within a single vector must be of the same type (e.g.,
 all elements are characters), whereas elements within a single list can be of
 different types (e.g., characters, integers, logicals, and even other lists). 
 
-``` {r 02-vec-vs-list, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A vector versus a list", fig.retina = 2, out.width = "650pt"}
+``` {r 02-vec-vs-list, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A vector versus a list", fig.retina = 2, out.width = "100%"}
 knitr::include_graphics("img/vec_vs_list/vec_vs_list.001.jpeg")
 ```
 
@@ -182,7 +182,7 @@ On the other hand, if our data frame had *list* columns, there would be no such 
 It is generally much more common to use *vector* columns, though, 
 as the values for a single variable are usually all of the same type.
 
-``` {r 02-dataframe, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Data frame and vector types", fig.retina = 2, out.width = "650pt"}
+``` {r 02-dataframe, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Data frame and vector types", fig.retina = 2, out.width = "100%"}
 knitr::include_graphics("img/dataframe/dataframe.001.jpeg")
 ```
 
@@ -234,7 +234,7 @@ the following three criteria [@wickham2014tidy]:
 Figure \@ref(fig:02-tidy-image) demonstrates a tidy data set that satisfies these 
 three criteria. 
 
-``` {r 02-tidy-image, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Tidy data", fig.retina = 2, out.width = "1150pt"}
+``` {r 02-tidy-image, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Tidy data", fig.retina = 2, out.width = "100%"}
 knitr::include_graphics("img/tidy_data.jpeg")
 ```
 
@@ -297,7 +297,7 @@ by creating a column called "year" and a column called
 "longer"&mdash;is shown as the right table in
 Figure \@ref(fig:02-wide-to-long).
 
-``` {r 02-wide-to-long, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from wide to long data", fig.retina = 2, out.width = "1150pt"}
+``` {r 02-wide-to-long, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from wide to long data", fig.retina = 2, out.width = "100%"}
 knitr::include_graphics("img/pivot_functions/pivot_functions.001.jpeg")
 ```
 
@@ -340,14 +340,14 @@ Figure \@ref(fig:img-pivot-longer-with-table),
 we could simply use one line of code (`max(mother_tongue)`) 
 to get the maximum value. 
 
-``` {r img-pivot-longer-with-table, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from wide to long with the pivot_longer function", out.width="1100pt", fig.retina = 2}
+``` {r img-pivot-longer-with-table, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from wide to long with the pivot_longer function", out.width="100%", fig.retina = 2}
 knitr::include_graphics("img/pivot_functions/pivot_functions.003.jpeg")
 ```
 
 Figure \@ref(fig:img-pivot-longer) details what arguments we need to specify to
 use the `tidyverse` function, `pivot_longer`, to accomplish this data transformation.
 
-``` {r img-pivot-longer, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the pivot_longer function", out.width="1100pt", fig.retina = 2}
+``` {r img-pivot-longer, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the pivot_longer function", out.width="100%", fig.retina = 2}
 knitr::include_graphics("img/pivot_longer.jpeg")
 ```
 
@@ -408,7 +408,7 @@ we need to create a column called "population"
 and a column called "commuters."
 This is illustrated in the right table of Figure \@ref(fig:long-to-wide).
 
-``` {r long-to-wide, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from long to wide data", fig.retina = 2, out.width = "1150pt"}
+``` {r long-to-wide, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from long to wide data", fig.retina = 2, out.width = "100%"}
 knitr::include_graphics("img/pivot_functions/pivot_functions.002.jpeg")
 ```
 
@@ -440,14 +440,14 @@ since these two variables are stored in the same column.
 Figure \@ref(fig:img-pivot-wider-table) shows how this data
 will be tidied using the `pivot_wider` function.
 
-``` {r img-pivot-wider-table, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from long to wide with pivot_wider", out.width="1100pt", fig.retina = 2}
+``` {r img-pivot-wider-table, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from long to wide with pivot_wider", out.width="100%", fig.retina = 2}
 knitr::include_graphics("img/pivot_functions/pivot_functions.004.jpeg")
 ```
 
 Figure \@ref(fig:img-pivot-wider) details what we need to specify 
 to use the `pivot_wider` function.
 
-``` {r img-pivot-wider, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the pivot_wider function", out.width="1100pt", fig.retina = 2}
+``` {r img-pivot-wider, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the pivot_wider function", out.width="100%", fig.retina = 2}
 knitr::include_graphics("img/pivot_wider.jpeg")
 ```
 
@@ -517,7 +517,7 @@ that speak each language most at work for each region.
 Figure \@ref(fig:img-separate) 
 outlines what we need to specify to use `separate`.
 
-``` {r img-separate, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the separate function", out.width="1100pt", fig.retina = 2}
+``` {r img-separate, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the separate function", out.width="100%", fig.retina = 2}
 knitr::include_graphics("img/separate_function.jpeg")
 ```
 
@@ -832,7 +832,7 @@ If we were to give the columns a new name,
 then `mutate` would create new columns with the names we specified.
 `mutate`'s general syntax is detailed in Figure \@ref(fig:img-mutate).
 
-``` {r img-mutate, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the mutate function", out.width="1100pt", fig.retina = 2}
+``` {r img-mutate, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the mutate function", out.width="100%", fig.retina = 2}
 knitr::include_graphics("img/mutate_function.jpeg")
 ```
 
@@ -952,7 +952,7 @@ each region and color the proportions by language.
 > Don't worry too much about the code to make this plot for now. We will cover 
 > visualizations in detail in Chapter \@ref(viz).
 
-```{r 02-plot, out.width = "70%", fig.cap = "Bar plot of proportions of Canadians reporting English as the most often spoken language at home."}
+```{r 02-plot, out.width = "100%", fig.cap = "Bar plot of proportions of Canadians reporting English as the most often spoken language at home."}
 ggplot(english_langs,
   aes(
     x = region, 
