--- a/inference.Rmd
+++ b/inference.Rmd
@@ -35,8 +35,8 @@ populations and then introduce two common techniques in statistical inference:
 ## Chapter learning objectives 
 By the end of the chapter, readers will be able to:
 
-* Describe real-world examples of questions that can be answered with the statistical inference.
-* Define common population parameters (e.g. mean, proportion, standard deviation) that are often estimated using sampled data, and estimate these from a sample.
+* Describe real-world examples of questions that can be answered with statistical inference.
+* Define common population parameters (e.g., mean, proportion, standard deviation) that are often estimated using sampled data, and estimate these from a sample.
 * Define the following statistical sampling terms (population, sample, population parameter, point estimate, sampling distribution).
 * Explain the difference between a population parameter and a sample point estimate.
 * Use R to draw random samples from a finite population.
@@ -81,7 +81,7 @@ In general, the process of using a sample to make a conclusion about the
 broader population from which it is taken is referred to as **statistical inference**. 
 \index{inference}\index{statistical inference|see{inference}}
 
-```{r 11-population-vs-sample, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Population versus sample", out.width="80%"}
+```{r 11-population-vs-sample, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Population versus sample", out.width="100%"}
 knitr::include_graphics("img/population_vs_sample.png")
 ```
 
@@ -123,13 +123,13 @@ We will look at an example using data from
 [Inside Airbnb](http://insideAirbnb.com/) [@insideairbnb]. Airbnb \index{Airbnb} is an online
 marketplace for arranging vacation rentals and places to stay. The data set
 contains listings for Vancouver, Canada, in September 2020. Our data
-includes an ID number, neighbourhood, type of room, the number of people the
+includes an ID number, neighborhood, type of room, the number of people the
 rental accommodates, number of bathrooms, bedrooms, beds, and the price per
 night. 
 
 <!--
 airbnb <- read_csv("data/listings.csv") |>
-  select(id, neighbourhood = neighbourhood_cleansed, room_type, accommodates, bathrooms = bathrooms_text, bedrooms, beds, price) |>
+  select(id, neighborhood = neighborhood_cleansed, room_type, accommodates, bathrooms = bathrooms_text, bedrooms, beds, price) |>
   mutate(price = as.numeric(str_remove(price, "[$]"))) |>
   na.omit()
 airbnb <- airbnb |>
@@ -278,7 +278,7 @@ can't take many samples and can't actually construct or visualize the sampling d
 We have created this particular example
 such that we *do* have access to the full population, which lets us visualize the 
 sampling distribution directly for learning purposes.
-```{r 11-example-proportions7, echo = TRUE, message = FALSE, warning = FALSE,fig.cap = "Sampling distribution of the sample proportion for sample size 40", fig.retina = 2, out.width = "70%"}
+```{r 11-example-proportions7, echo = TRUE, message = FALSE, warning = FALSE,fig.cap = "Sampling distribution of the sample proportion for sample size 40", fig.retina = 2, out.width = "100%"}
 sampling_distribution <- ggplot(sample_estimates, aes(x = sample_proportion)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey", bins = 12) +
   ylab("Count") +
@@ -297,12 +297,12 @@ sample_estimates |>
   summarize(mean = mean(sample_proportion))
 ```
 
-We notice that the sample proportions are centred around the population
+We notice that the sample proportions are centered around the population
 proportion value, `r round(population_proportion,3)`! In general, the mean of
-the sampling distribution should be equal to the population porpotion.
-This is great news, because it means that the sample proportion is neither an overestimate nor an
+the sampling distribution should be equal to the population proportion.
+This is great news because it means that the sample proportion is neither an overestimate nor an
 underestimate of the population proportion. 
-In other words, if you were to take many samples like we did above, there is no tendency 
+In other words, if you were to take many samples as we did above, there is no tendency 
 towards over or underestimating the population proportion. 
 In a real data analysis setting where you just have access to your single
 sample, this implies that you would suspect that your sample point estimate is
@@ -314,7 +314,7 @@ In the previous section, our variable of interest&mdash;`room_type`&mdash;was
 *categorical*, and the population parameter was a proportion. As mentioned in
 the chapter introduction, there are many choices of the population parameter
 for each type of variable. What if we wanted to infer something about a
-population of *quantitative* variables instead? For instance, a traveller
+population of *quantitative* variables instead? For instance, a traveler
 visiting Vancouver, Canada may wish to estimate the
 population *mean* (or average) price per night of Airbnb listings. Knowing
 the average could help them tell whether a particular listing is overpriced.
@@ -322,7 +322,7 @@ We can visualize the population distribution of the price per night with a histo
 ```{r, echo = F}
 options(pillar.sigfig = 5)
 ```
-```{r 11-example-means2, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Population distribution of price per night ($) for all Airbnb listings in Vancouver, Canada", fig.retina = 2, out.width = "70%"}
+```{r 11-example-means2, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Population distribution of price per night ($) for all Airbnb listings in Vancouver, Canada", fig.retina = 2, out.width = "100%"}
 population_distribution <- ggplot(airbnb, aes(x = price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") + 
@@ -362,7 +362,7 @@ We can create a histogram to visualize the distribution of observations in the
 sample (Figure \@ref(fig:11-example-means-sample-hist)), and calculate the mean
 of our sample.
 
-```{r 11-example-means-sample-hist, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Distribution of price per night ($) for sample of 40 Airbnb listings", fig.retina = 2, out.width = "70%"}
+```{r 11-example-means-sample-hist, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Distribution of price per night ($) for sample of 40 Airbnb listings", fig.retina = 2, out.width = "100%"}
 sample_distribution <- ggplot(one_sample, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") + 
@@ -400,7 +400,7 @@ samples
 
 Now we can calculate the sample mean for each replicate and plot the sampling
 distribution of sample means for samples of size 40.
-```{r 11-example-means4, echo = TRUE, message = FALSE, warning = FALSE, fig.cap= "Sampling distribution of the sample means for sample size of 40", fig.retina = 2, out.width = "70%"}
+```{r 11-example-means4, echo = TRUE, message = FALSE, warning = FALSE, fig.cap= "Sampling distribution of the sample means for sample size of 40", fig.retina = 2, out.width = "100%"}
 sample_estimates <- samples |>
   group_by(replicate) |>
   summarize(sample_mean = mean(price))
@@ -445,7 +445,7 @@ Notice that the mean of the sample means is \$`r round(mean(sample_estimates$sam
 was \$`r round(mean(airbnb$price),2)`. 
 -->
 
-```{r 11-example-means5, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Comparison of population distribution, sample distribution and sampling distribution"}
+```{r 11-example-means5, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Comparison of population distribution, sample distribution, and sampling distribution"}
 grid.arrange(population_distribution +
   ggtitle("Population") +
   xlim(min(airbnb$price), 600),
@@ -569,7 +569,7 @@ grid.arrange(annotated_sampling_dist_20,
 Based on the visualization in Figure \@ref(fig:11-example-means7), three points
 about the sample mean become clear.  First, the mean of the sample mean (across
 samples) is equal to the population mean. In other words, the sampling
-distribution is centred at the population mean.  Second, increasing the size of
+distribution is centered at the population mean.  Second, increasing the size of
 the sample decreases the spread (i.e., the variability) of the sampling
 distribution. Therefore, a larger sample size results in a more reliable point
 estimate of the population parameter. And third, the distribution of the sample
@@ -577,7 +577,7 @@ mean is roughly bell-shaped. \index{sampling distribution!effect of sample size}
 
 > **Note:** You might notice that in the `n = 20` case in Figure \@ref(fig:11-example-means7),
 > the distribution is not *quite* bell-shaped. There is a bit of skew towards the right!
-> You might also notice that in the `n = 50` case and larger, that skew seems disappear.
+> You might also notice that in the `n = 50` case and larger, that skew seems to disappear.
 > In general, the sampling distribution&mdash;for both means and proportions&mdash;only 
 > becomes bell-shaped *once the sample size is large enough*.
 > How large is "large enough?" Unfortunately, it depends entirely on the problem at hand. But 
@@ -588,9 +588,9 @@ mean is roughly bell-shaped. \index{sampling distribution!effect of sample size}
 ---> 
 
 ### Summary
-1. A point estimate is a single value computed using a sample from a population (e.g. a mean or proportion)
+1. A point estimate is a single value computed using a sample from a population (e.g., a mean or proportion)
 2. The sampling distribution of an estimate is the distribution of the estimate for all possible samples of a fixed size from the same population.
-3. The shape of the sampling distribution is usually bell-shaped with one peak and centred at the population mean or proportion.
+3. The shape of the sampling distribution is usually bell-shaped with one peak and centered at the population mean or proportion.
 4. The spread of the sampling distribution is related to the sample size. As the sample size increases, the spread of the sampling distribution decreases. 
 
 ## Bootstrapping 
@@ -709,7 +709,7 @@ For a sample of size $n$, you:
 6. Repeat steps (1) - (5) many times to create a distribution of point estimates (the bootstrap distribution)
 7. Calculate the plausible range of values around our observed point estimate
 
-```{r 11-intro-bootstrap-image, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Overview of the bootstrap process", fig.retina = 2, out.width="880pt"}
+```{r 11-intro-bootstrap-image, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Overview of the bootstrap process", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/intro-bootstrap.jpeg")
 ```
 ### Bootstrapping in R 
@@ -717,7 +717,7 @@ Let’s continue working with our Airbnb example to illustrate how we might crea
 and use a bootstrap distribution using just a single sample from the population. 
 Once again, suppose we are
 interested in estimating the population mean price per night of all Airbnb
-listings in Vancouver, Canada, using a single sample size 40.
+listings in Vancouver, Canada, using a single sample size of 40.
 Recall our point estimate was \$`r round(estimates$sample_mean, 2)`. The
 histogram of prices in the sample is displayed in Figure \@ref(fig:11-bootstrapping1).
 
@@ -726,7 +726,7 @@ one_sample <- one_sample |>
   ungroup() |> select(-replicate)
 ```
 
-```{r 11-bootstrapping1, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Histogram of price per night ($) for one sample of size 40", fig.retina = 2, out.width = "70%"}
+```{r 11-bootstrapping1, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Histogram of price per night ($) for one sample of size 40", fig.retina = 2, out.width = "100%"}
 one_sample
 one_sample_dist <- ggplot(one_sample, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
@@ -750,7 +750,7 @@ we change the argument for `replace` from its default value of `FALSE` to `TRUE`
 \index{bootstrap!in R}
 \index{rep\_sample\_n!bootstrap}
 
-```{r 11-bootstrapping3, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Bootstrap distribution", fig.retina = 2, out.width = "70%"}
+```{r 11-bootstrapping3, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Bootstrap distribution", fig.retina = 2, out.width = "100%"}
 boot1 <- one_sample |>
   rep_sample_n(size = 40, replace = TRUE, reps = 1)
 boot1_dist <- ggplot(boot1, aes(price)) +
@@ -813,7 +813,7 @@ generate a bootstrap distribution of our point estimates. The bootstrap
 distribution (Figure \@ref(fig:11-bootstrapping5)) suggests how we might expect
 our point estimate to behave if we took another sample.
 
-```{r 11-bootstrapping5, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Distribution of the bootstrap sample means", out.width = "70%"}
+```{r 11-bootstrapping5, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Distribution of the bootstrap sample means", out.width = "100%"}
 boot20000_means <- boot20000 |>
   group_by(replicate) |>
   summarize(mean = mean(price))
@@ -829,7 +829,7 @@ boot_est_dist
 Let's compare the bootstrap distribution&mdash;which we construct by taking many samples from our original sample of size 40&mdash;with 
 the true sampling distribution&mdash;which corresponds to taking many samples from the population.
 
-```{r 11-bootstrapping6, echo = F, message = FALSE, warning = FALSE, fig.cap = "Comparison of distribution of the bootstrap sample means and sampling distribution", out.height = "70%"}
+```{r 11-bootstrapping6, echo = F, message = FALSE, warning = FALSE, fig.cap = "Comparison of the distribution of the bootstrap sample means and sampling distribution", out.height = "70%"}
 samples <- rep_sample_n(airbnb, size = 40, reps = 20000)
 
 sample_estimates <- samples |>
@@ -868,13 +868,13 @@ There are two essential points that we can take away from Figure
 distribution and the bootstrap distribution are similar; the bootstrap
 distribution lets us get a sense of the point estimate's variability. The
 second important point is that the means of these two distributions are
-different. The sampling distribution is centred at 
+different. The sampling distribution is centered at 
 \$`r round(mean(airbnb$price),2)`, the population mean value. However, the bootstrap
-distribution is centred at the original sample's mean price per night, 
+distribution is centered at the original sample's mean price per night, 
 \$`r round(mean(boot20000_means$mean), 2)`. Because we are resampling from the
-original sample repeatedly, we see that the bootstrap distribution is centred
+original sample repeatedly, we see that the bootstrap distribution is centered
 at the original sample's mean value (unlike the sampling distribution of the
-sample mean, which is centred at the population parameter value). 
+sample mean, which is centered at the population parameter value). 
 
 Figure
 \@ref(fig:11-bootstrapping7) summarizes the bootstrapping process.
@@ -1063,7 +1063,7 @@ the middle 95\% of the sample mean prices in the bootstrap distribution. We can
 visualize the interval on our distribution in Figure
 \@ref(fig:11-bootstrapping9). 
 
-```{r 11-bootstrapping9, echo = F, message = FALSE, warning = FALSE, fig.cap = "Distribution of the bootstrap sample means with percentile lower and upper bounds", out.width = "70%"}
+```{r 11-bootstrapping9, echo = F, message = FALSE, warning = FALSE, fig.cap = "Distribution of the bootstrap sample means with percentile lower and upper bounds", out.width = "100%"}
 boot_est_dist +
   geom_vline(xintercept = bounds, col = "#E69F00", size = 2, linetype = 2) +
   annotate("text",
