--- a/viz.Rmd
+++ b/viz.Rmd
@@ -283,11 +283,11 @@ default settings.
 \index{ggplot!aes}
 \index{ggplot!geom\_point}
  
-```{r 03-ggplot-function-scatter, echo=FALSE, fig.cap = "Creating a scatter plot with the ggplot function", message =F, out.width="100%"}
+```{r 03-ggplot-function-scatter, echo=FALSE, fig.cap = "Creating a scatter plot with the ggplot function.", message =F, out.width="100%"}
 knitr::include_graphics("img/ggplot_function_scatter.jpeg")
 ```
 
-```{r 03-data-co2-scatter, warning=FALSE, message=FALSE, fig.height = 4, fig.width = 6, fig.cap = "Scatter plot of atmospheric concentration of CO$_{2}$ over time"}
+```{r 03-data-co2-scatter, warning=FALSE, message=FALSE, fig.height = 4, fig.width = 6, fig.cap = "Scatter plot of atmospheric concentration of CO$_{2}$ over time."}
 co2_scatter <- ggplot(co2_df, aes(x = date_measured, y = ppm)) +
   geom_point()
 
@@ -318,7 +318,7 @@ Let's now try to visualize the `co2_df` as a line plot
 with just the default arguments: 
 \index{ggplot!geom\_line}
 
-```{r 03-data-co2-line, warning=FALSE, message=FALSE, fig.height = 4, fig.width = 6, fig.cap = "Line plot of atmospheric concentration of CO$_{2}$ over time"}
+```{r 03-data-co2-line, warning=FALSE, message=FALSE, fig.height = 4, fig.width = 6, fig.cap = "Line plot of atmospheric concentration of CO$_{2}$ over time."}
 co2_line <- ggplot(co2_df, aes(x = date_measured, y = ppm)) +
   geom_line()
 
@@ -351,7 +351,7 @@ change the font size, we use the `theme` function with the `text` argument:
 > Interested readers may consult the `theme` function documentation;
 > see the additional resources section at the end of this chapter.
 
-```{r 03-data-co2-line-2, warning=FALSE, message=FALSE, fig.height = 4, fig.width = 6, fig.cap = "Line plot of atmospheric concentration of CO$_{2}$ over time with clearer axes and labels"}
+```{r 03-data-co2-line-2, warning=FALSE, message=FALSE, fig.height = 4, fig.width = 6, fig.cap = "Line plot of atmospheric concentration of CO$_{2}$ over time with clearer axes and labels."}
 co2_line <- ggplot(co2_df, aes(x = date_measured, y = ppm)) +
   geom_line() +
   xlab("Year") +
@@ -385,7 +385,7 @@ to convert the character strings we provide to `c` to `date` vectors.
 > but is not loaded by it. 
 > Hence we need to load it separately in the code below.
 
-```{r 03-data-co2-line-3, warning = FALSE, message = FALSE, fig.height = 4, fig.width = 6, fig.cap = "Line plot of atmospheric concentration of CO$_{2}$ from 1990 to 1994"}
+```{r 03-data-co2-line-3, warning = FALSE, message = FALSE, fig.height = 4, fig.width = 6, fig.cap = "Line plot of atmospheric concentration of CO$_{2}$ from 1990 to 1994."}
 library(lubridate)
 
 co2_line <- ggplot(co2_df, aes(x = date_measured, y = ppm)) +
@@ -454,7 +454,7 @@ function with the `waiting` variable on the horizontal axis, the `eruptions`
 variable on the vertical axis, and the `geom_point` geometric object.
 The result is shown in Figure \@ref(fig:03-data-faithful-scatter).
 
-```{r 03-data-faithful-scatter, warning=FALSE, message=FALSE, fig.cap = "Scatter plot of waiting time and eruption time"}
+```{r 03-data-faithful-scatter, warning=FALSE, message=FALSE, fig.cap = "Scatter plot of waiting time and eruption time."}
 faithful_scatter <- ggplot(faithful, aes(x = waiting, y = eruptions)) +
   geom_point()
 
@@ -468,7 +468,7 @@ the points are generally nicely visually separated, and the pattern they form
 is clear.  In order to refine the visualization, we need only to add axis
 labels and make the font more readable:
 
-```{r 03-data-faithful-scatter-2, warning=FALSE, message=FALSE, fig.cap = "Scatter plot of waiting time and eruption time with clearer axes and labels"}
+```{r 03-data-faithful-scatter-2, warning=FALSE, message=FALSE, fig.cap = "Scatter plot of waiting time and eruption time with clearer axes and labels."}
 faithful_scatter <- ggplot(faithful, aes(x = waiting, y = eruptions)) +
   geom_point() +
   labs(x = "Waiting Time (mins)", y = "Eruption Duration (mins)") +
@@ -502,7 +502,7 @@ We will begin with a scatter plot of the `mother_tongue` and `most_at_home` colu
 The resulting plot is shown in Figure \@ref(fig:03-mother-tongue-vs-most-at-home).
 \index{ggplot!geom\_point}
 
-```{r 03-mother-tongue-vs-most-at-home, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home"}
+```{r 03-mother-tongue-vs-most-at-home, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home."}
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   geom_point()
 ``` 
@@ -516,7 +516,7 @@ make the axes labels on the plots more readable.
 \index{escape character} We should also increase the font size to further 
 improve readability.
 
-```{r 03-mother-tongue-vs-most-at-home-labs, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with x and y labels"}
+```{r 03-mother-tongue-vs-most-at-home-labs, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with x and y labels."}
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   geom_point() +
   labs(x = "Language spoken most at home \n (number of Canadian residents)",
@@ -580,7 +580,7 @@ to put commas in these numbers to increase their readability.
 We can do this in R by passing the `label_comma` function (from the `scales` package)
 to the `labels` argument of the `scale_x_log10` and `scale_x_log10` functions.
 
-```{r 03-mother-tongue-vs-most-at-home-scale, message = FALSE, warning =  FALSE, fig.width = 5.75, fig.height = 5, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with log adjusted x and y axes"}
+```{r 03-mother-tongue-vs-most-at-home-scale, message = FALSE, warning =  FALSE, fig.width = 5.75, fig.height = 5, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with log adjusted x and y axes."}
 library(scales)
 
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
@@ -637,7 +637,7 @@ Finally, we will edit the visualization to use the percentages we just computed
 units). Figure \@ref(fig:03-mother-tongue-vs-most-at-home-scale-props) displays
 the final result.
 
-```{r 03-mother-tongue-vs-most-at-home-scale-props, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home"}
+```{r 03-mother-tongue-vs-most-at-home-scale-props, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home."}
 ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent)) +
   geom_point() +
   labs(x = "Language spoken most at home \n (percentage of Canadian residents)",
@@ -694,7 +694,7 @@ that the `category` column should color the points. Adding this argument will
 color the points according to their group and add a legend at the side of the
 plot. 
 
-```{r 03-scatter-color-by-category, fig.width=7.75, fig.height=4, warning=FALSE,  fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category"}
+```{r 03-scatter-color-by-category, fig.width=7.75, fig.height=4, warning=FALSE,  fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category."}
 ggplot(can_lang, aes(x = most_at_home_percent, 
                      y = mother_tongue_percent, 
                      color = category)) +
@@ -736,7 +736,7 @@ this makes the scatter point shapes different for each category. This kind of
 visual redundancy&mdash;i.e., conveying the same information with both scatter point color and shape&mdash;can
 further improve the clarity and accessibility of your visualization.
 
-```{r scatter-color-by-category-palette, fig.width=7.75, fig.height=4, warning=FALSE,  fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category with color-blind friendly colors"}
+```{r scatter-color-by-category-palette, fig.width=7.75, fig.height=4, warning=FALSE,  fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category with color-blind friendly colors."}
 ggplot(can_lang, aes(x = most_at_home_percent, 
                      y = mother_tongue_percent, 
                      color = category, 
@@ -801,7 +801,7 @@ can_lang <- bind_rows(
 
 We have added a few more layers to make the data visualization in Figure \@ref(fig:03-nachos-to-cheesecake) even more effective. Specifically, we used have improved the visualizations accessibility by choosing colors that are easier to distinguish, mapped category to shape, and handled the problem of overlapping data points by making them slightly transparent. \index{ggplot!transparency}\index{alpha|see{ggplot}}
 
-```{r 03-nachos-to-cheesecake, fig.width=7.75, fig.height=4, warning=FALSE, message=FALSE, fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category"}
+```{r 03-nachos-to-cheesecake, fig.width=7.75, fig.height=4, warning=FALSE, message=FALSE, fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category."}
 ggplot(can_lang, aes(
   x = most_at_home_percent,
   y = mother_tongue_percent,
@@ -859,7 +859,7 @@ the landmass sizes. So we have to pass the `stat = "identity"` argument to `geom
 shown in Figure \@ref(fig:03-data-islands-bar).
 \index{ggplot!geom\_bar}
 
-```{r 03-data-islands-bar, warning=FALSE, message=FALSE,  fig.cap = "Bar plot of all Earth's landmasses' size with squished labels"}
+```{r 03-data-islands-bar, warning=FALSE, message=FALSE,  fig.cap = "Bar plot of all Earth's landmasses' size with squished labels."}
 islands_bar <- ggplot(islands_df, aes(x = landmass, y = size)) +
   geom_bar(stat = "identity")
 
@@ -878,7 +878,7 @@ space, we'll use horizontal bars instead of vertical ones. We do this by
 swapping the `x` and `y` variables:
 \index{slice\_max}
 
-```{r 03-data-islands-bar-2, warning=FALSE, message=FALSE, fig.cap = "Bar plot of size for Earth's largest 12 landmasses"}
+```{r 03-data-islands-bar-2, warning=FALSE, message=FALSE, fig.cap = "Bar plot of size for Earth's largest 12 landmasses."}
 islands_top12 <- slice_max(islands_df, order_by = size, n = 12)
 islands_bar <- ggplot(islands_top12, aes(x = size, y = landmass)) +
   geom_bar(stat = "identity") 
@@ -921,7 +921,7 @@ Thus we use the `fill` argument inside `labs` to change that to "Type."
 Finally, we again \index{ggplot!reorder} use the `theme` function 
 to change the font size.
 
-```{r 03-data-islands-bar-4, warning = FALSE, message = FALSE, fig.width = 8, fig.cap = "Bar plot of size for Earth's largest 12 landmasses colored by whether its a continent with clearer axes and labels"}
+```{r 03-data-islands-bar-4, warning = FALSE, message = FALSE, fig.width = 8, fig.cap = "Bar plot of size for Earth's largest 12 landmasses colored by whether its a continent with clearer axes and labels."}
 islands_bar <- ggplot(islands_top12, 
                       aes(x = size,
                           y = fct_reorder(landmass, size, .desc = TRUE), 
@@ -985,7 +985,7 @@ To create a histogram in `ggplot2` we will use the `geom_histogram` geometric
 object, setting the `x` axis to the `Speed` measurement variable. As usual, 
 let's use the default arguments just to see how things look.
 
-```{r 03-data-morley-hist, warning=FALSE, message=FALSE, fig.cap = "Histogram of Michelson's speed of light data"}
+```{r 03-data-morley-hist, warning=FALSE, message=FALSE, fig.cap = "Histogram of Michelson's speed of light data."}
 morley_hist <- ggplot(morley, aes(x = Speed)) +
   geom_histogram()
 
@@ -1015,7 +1015,7 @@ Note that
 *vertical lines* are used to denote quantities on the *horizontal axis*, 
 while *horizontal lines* are used to denote quantities on the *vertical axis*. 
 
-```{r 03-data-morley-hist-2, warning=FALSE, message=FALSE,fig.cap = "Histogram of Michelson's speed of light data with vertical line indicating true speed of light"}
+```{r 03-data-morley-hist-2, warning=FALSE, message=FALSE,fig.cap = "Histogram of Michelson's speed of light data with vertical line indicating true speed of light."}
 morley_hist <- ggplot(morley, aes(x = Speed)) +
   geom_histogram() +
   geom_vline(xintercept = 792.458, linetype = "dashed", size = 1)
@@ -1044,7 +1044,7 @@ instead of stacked bars
 (which is the default for bar plots or histograms 
 when they are colored by another categorical variable).
 
-```{r 03-data-morley-hist-3, warning=FALSE, message=FALSE, fig.cap = "Histogram of Michelson's speed of light data colored by experiment"}
+```{r 03-data-morley-hist-3, warning=FALSE, message=FALSE, fig.cap = "Histogram of Michelson's speed of light data colored by experiment."}
 morley_hist <- ggplot(morley, aes(x = Speed, fill = Expt)) +
   geom_histogram(alpha = 0.5, position = "identity") +
   geom_vline(xintercept = 792.458, linetype = "dashed", size = 1.0)
@@ -1068,7 +1068,7 @@ categories. By writing
 and the color will be mapped discretely.
 \index{factor!usage in ggplot}
 
-```{r 03-data-morley-hist-with-factor, warning=FALSE, message=FALSE, fig.cap = "Histogram of Michelson's speed of light data colored by experiment as factor"}
+```{r 03-data-morley-hist-with-factor, warning=FALSE, message=FALSE, fig.cap = "Histogram of Michelson's speed of light data colored by experiment as factor."}
 morley_hist <- ggplot(morley, aes(x = Speed, fill = as_factor(Expt))) +
   geom_histogram(alpha = 0.5, position = "identity") +
   geom_vline(xintercept = 792.458, linetype = "dashed", size = 1.0)
@@ -1107,7 +1107,7 @@ This function allows the column names to be correctly evaluated
 in the context of the data frame.
 \index{ggplot!facet\_grid}
 
-```{r 03-data-morley-hist-4, warning=FALSE, message=FALSE, fig.height = 7, fig.cap = "Histogram of Michelson's speed of light data split vertically by experiment"}
+```{r 03-data-morley-hist-4, warning=FALSE, message=FALSE, fig.height = 7, fig.cap = "Histogram of Michelson's speed of light data split vertically by experiment."}
 morley_hist <- ggplot(morley, aes(x = Speed, fill = as_factor(Expt))) +
   geom_histogram() +
   facet_grid(rows = vars(Expt)) +
@@ -1132,7 +1132,7 @@ of just how accurate all the experiments were overall. For example, how accurate
 To answer this question, we'll use the `mutate` function to transform our data into a relative measure of accuracy rather than absolute measurements:
 \index{ggplot!labs}\index{ggplot!theme}
 
-```{r 03-data-morley-hist-5, warning=FALSE, message=FALSE, fig.height = 7, fig.cap = "Histogram of relative accuracy split vertically by experiment with clearer axes and labels"}
+```{r 03-data-morley-hist-5, warning=FALSE, message=FALSE, fig.height = 7, fig.cap = "Histogram of relative accuracy split vertically by experiment with clearer axes and labels."}
 morley_rel <- mutate(morley, 
                      relative_accuracy = 100 * 
                        ((299000 + Speed) - 299792.458) / (299792.458))
@@ -1388,7 +1388,7 @@ Let's learn how to save plot images to these different file formats using a
 scatter plot of 
 the [Old Faithful data set](https://www.stat.cmu.edu/~larry/all-of-statistics/=data/faithful.dat) [@faithfuldata].
 
-```{r 03-plot-line, collapse=TRUE, warning=FALSE, message=FALSE, fig.cap = "Scatter plot of waiting time and eruption time"}
+```{r 03-plot-line, collapse=TRUE, warning=FALSE, message=FALSE, fig.cap = "Scatter plot of waiting time and eruption time."}
 library(svglite) # we need this to save SVG files
 faithful_plot <- ggplot(data = faithful, aes(x = waiting, y = eruptions)) +
   geom_point() +
@@ -1456,7 +1456,7 @@ sizes.  This makes them great for presentation media of all sizes, from papers
 to posters to billboards.
 
 
-```{r 03-raster-image, echo=FALSE, fig.cap = "Zoomed in `faithful`, raster (PNG, left) and vector (SVG, right) formats", fig.show="hold", out.width="100%", out.height="200pt", fig.align= "center", message =F}
+```{r 03-raster-image, echo=FALSE, fig.cap = "Zoomed in `faithful`, raster (PNG, left) and vector (SVG, right) formats.", fig.show="hold", out.width="100%", out.height="200pt", fig.align= "center", message =F}
 knitr::include_graphics("img/faithful_zoom.png")
 knitr::include_graphics("img/faithful_zoom.svg")
 ```
